--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "driver.js": "^1.3.5",
     "lucide-react": "^0.469.0",
     "next": "14.2.16",
     "react": "^18",
